@@ -40,7 +40,7 @@ import java.lang.ref.WeakReference;
  * 
  * @author The Red5 Project (red5@osflash.org) 
  * @author Luke Hubbard (luke@codegent.com)  
- * @author Paul Gregoire (mondain@gmail.com) 
+ * @author Paul Gregoire (mondain@gmail.com)
  */
 public final class Red5 implements Red5MBean {
 
